syntax = "proto3";

package cn.survey.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message Empty {}

message ListBenchmarkDataTypeRequest {
  int32 survey_source_group_key = 1;
}

message SurveyCutFilterOptionsRequest {
  //select * from table where survey_year in [2019, 2020, 2021, 2022]
  int32 years_back = 1; // how many years back to look for surveys
}

message SurveyCutsRequest {
  repeated int32 survey_years = 1;
  repeated int32 publisher_keys = 2;
  repeated int32 survey_keys = 3;
  repeated int32 industry_sector_keys = 4;
  repeated int32 organization_type_keys = 5;
  repeated int32 cut_group_keys = 6;
  repeated int32 cut_sub_group_keys = 7;
}

message SurveyCutListResponse {
  repeated string survey_years = 1;
  repeated NameKeySet survey_publisher_name_keysets = 2;
  repeated NameKeySet survey_name_keysets = 3;
  repeated NameKeySet industry_sector_name_keysets = 4;
  repeated NameKeySet organization_type_name_keysets = 5;
  repeated NameKeySet cut_group_name_keysets = 6;
  repeated NameKeySet cut_sub_group_name_keysets = 7;
  repeated NameKeySet cut_name_keysets = 8;
}

message SurveyCutsDataRequest {
  repeated int32 survey_years = 1; // partition by year
  repeated int32 cut_keys = 2; // bucket by cut key

  // do we actually need to filter on these?
  repeated string benchmark_data_type_names = 3;
  repeated int32 benchmark_data_type_keys = 4;
  repeated string standard_job_codes = 5;

  // these should use contains filtering
  string standard_job_description = 6;
  string survey_job_description = 7;

  // filter by job code, title or description
  string standard_job_search = 8;
}

message BenchmarkDataTypeListResponse {
  message BenchmarkDataTypeResponse {
    int32 benchmark_data_type_key = 1;
    string benchmark_data_type_name = 2;
    float aging_factor_default = 3;
    int32 benchmark_data_type_default = 4;
    int32 benchmark_data_type_order = 5;
  }

  repeated BenchmarkDataTypeResponse benchmark_data_types = 1;
}

message SourceGroupListResponse {
  message SourceGroupResponse {
    int32 survey_source_group_key = 1;
    string survey_source_group_name = 2;
  }

  repeated SourceGroupResponse source_groups = 1;
}

message FilterKeyYear {
  int32 survey_year = 1;
  int32 filter_key = 2;
}

message NameKeySet {
  string filter_name = 1;
  repeated FilterKeyYear filter_key_years = 2;
}

message SurveyCutFilterOptionsListResponse {
  message SurveyCutFilterCutSubGroupLevel {
    NameKeySet cut_sub_group_name_key_set = 1;
  }

  message SurveyCutFilterCutGroupLevel {
    NameKeySet cut_group_name_key_set = 1;
    repeated SurveyCutFilterCutSubGroupLevel cut_sub_group_name_key_sets = 2;
  }

  message SurveyCutFilterSurveyNameLevel {
    NameKeySet survey_name_key_set = 1;
    repeated NameKeySet industry_sector_name_key_sets = 2;
    repeated NameKeySet organization_type_name_key_sets = 3;
    repeated SurveyCutFilterCutGroupLevel cut_group_name_key_sets = 4;
  }

  message SurveyCutFilterPubLevel {
    NameKeySet survey_publisher_name_key_set = 1;
    repeated SurveyCutFilterSurveyNameLevel survey_name_key_sets = 2;
  }

  int32 survey_year = 1;
  repeated SurveyCutFilterPubLevel survey_publisher_name_key_sets = 2;
  int64 job_epoch_offset = 3;
  google.protobuf.Timestamp job_utc_ts = 4;
  google.protobuf.Timestamp job_server_ts = 5;
  string job_uuid = 6;
}

message SurveyCutsListResponse {
  message SurveyCutsResponse {
    NameKeySet cut_name_key_set = 16;
    google.protobuf.Timestamp survey_data_effective_date = 18;
  }

  repeated SurveyCutsResponse survey_cuts = 1;
}

message MarketPercentileSet {
  int32 percentile = 1;
  google.protobuf.FloatValue market_value = 2;
  int32 benchmark_data_type_key = 3;
}

message SurveyCutsDataListResponse {
  message SurveyCutsDataResponse {
    string survey_id = 1;
    int32 survey_key = 2;
    int32 survey_year = 3;
    string survey_code = 4;
    string survey_name = 5;
    string survey_description = 6;
    string footer_notes = 7;
    int32 survey_publisher_key = 8;
    string survey_publisher_name = 9;
    google.protobuf.Timestamp survey_data_effective_date = 10;
    string standard_job_code = 11;
    string standard_job_title = 12;
    string standard_job_description = 13;
    string survey_specialty_code = 14;
    string survey_specialty_name = 15;
    string survey_job_description = 16;
    int32 benchmark_data_type_key = 17;
    string benchmark_data_type_name = 18;
    int32 cut_key = 19;
    string cut_name = 20;
    int32 cut_group_key = 21;
    string cut_group_name = 22;
    int32 cut_sub_group_key = 23;
    string cut_sub_group_name = 24;
    int32 organization_type_key = 25;
    string organization_type_name = 26;
    int32 certification_level_key = 27;
    string certification_level_name = 28;
    int32 provider_count = 29;
    int32 organization_count = 30;
    int32 industry_sector_key = 31;
    string industry_sector_name = 32;
    float market_mean = 33;
    float market_p50 = 34;
    float standard_deviation = 35;
    repeated MarketPercentileSet market_value_by_percentiles = 36;
    int32 raw_data_key = 37;
    int32 extract_log_key = 38;
    int32 row_number = 39;
    double job_epoch_offset = 40;
    google.protobuf.Timestamp job_utc_ts = 41;
    google.protobuf.Timestamp job_server_ts = 42;
    string job_uuid = 43;
    string staged_job_uuid = 44;
  }

  repeated SurveyCutsDataResponse survey_cuts_data = 1;
}

message ListPercentilesRequest {
  repeated string standard_job_codes = 1;
  repeated int32 industry_sector_keys = 2;
  repeated int32 organization_type_keys = 3;
  repeated int32 cut_group_keys = 4;
  repeated int32 cut_sub_group_keys = 5;
  repeated int32 benchmark_data_type_keys = 6;
  repeated int32 survey_keys = 7;
  repeated int32 cut_keys = 8;
}

message ListPercentilesResponse {
  repeated MarketPercentileSet market_value_by_percentiles = 1;
}
